--- a/package.json
+++ b/package.json
@@ -25,10 +25,15 @@
     "chalk": "^4.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.2",
+    "css-loader": "^4.2.2",
     "html-loader": "^1.3.0",
     "html-webpack-plugin": "^4.4.1",
     "husky": "^4.2.5",
+    "less": "^3.12.2",
+    "less-loader": "^5.0.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "ora": "^5.0.0",
+    "style-loader": "^1.2.1",
     "typescript": "^4.0.2",
     "webpack": "^4.44.1",
     "webpack-bundle-analyzer": "^3.8.0",
